# FerriteDB

./: .gitignore  Cargo.toml  FerriteDB_BuildPlan.md  README.md
.github/workflows/: ci.yml
crates/catalog/: Cargo.toml
crates/catalog/src/: lib.rs  schema.rs  table.rs
crates/exec/: Cargo.toml
crates/exec/src/: lib.rs
crates/exec/src/operators/: filter.rs  index_scan.rs  join.rs  mod.rs  project.rs  seq_scan.rs
crates/exec/tests/: operators_test.rs
crates/index/: Cargo.toml
crates/index/src/: btree.rs  key.rs  lib.rs  node.rs
crates/optimizer/: Cargo.toml
crates/optimizer/src/: lib.rs  planner.rs  rules.rs
crates/optimizer/tests/: optimizer_test.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs
crates/sql/: Cargo.toml
crates/sql/src/: ast.rs  lexer.rs  lib.rs  parser.rs
crates/storage/: Cargo.toml
crates/storage/src/: buffer_pool.rs  disk_manager.rs  lib.rs  page.rs
crates/txn/: Cargo.toml
crates/txn/src/: lib.rs  lock_manager.rs  mvcc.rs  wal.rs
docs/: design_notes.md
tests/integration/: .gitkeep
