[workspace]
members = [
    "crates/storage",
    "crates/index",
    "crates/catalog",
    "crates/sql",
    "crates/exec",
    "crates/optimizer",
    "crates/txn",
    "crates/server",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["H8rsh100"]
license = "MIT"
repository = "https://github.com/H8rsh100/FerriteDB"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
