[package]
name = "optimizer"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
catalog   = { path = "../catalog" }
sql       = { path = "../sql" }
exec      = { path = "../exec" }
storage   = { path = "../storage" }

[dev-dependencies]
tempfile = "3"
